# Spider_Bot_Simulation

Spyder351/spider_bot_control/: CMakeLists.txt  package.xml
Spyder351/spider_bot_control/config/: spider_bot_control.yaml
Spyder351/spider_bot_control/launch/: spider_bot_control.launch
Spyder351/spider_bot_description/: CMakeLists.txt  package.xml
Spyder351/spider_bot_description/urdf/: spider_bot.xacro  spider_bot2.xacro  spider_bot3.xml
Spyder351/spider_bot_gazebo/: CMakeLists.txt  package.xml
Spyder351/spider_bot_gazebo/launch/: spider_bot.launch
Spyder351/spider_bot_gazebo/worlds/: spider_bot.world
matlabfiles/: place_controller.m  spider_bot_controller.m  stand_controller.m  transform_coordinates_in_3D.m  walk_controller.m
one_leg_simulator/spider_leg_control/: CMakeLists.txt  package.xml
one_leg_simulator/spider_leg_control/config/: spider_leg_control.yaml
one_leg_simulator/spider_leg_control/launch/: spider_leg_control.launch
one_leg_simulator/spider_leg_description/: CMakeLists.txt  package.xml
one_leg_simulator/spider_leg_description/urdf/: arm.gazebo  arm.xacro  arm2.xml
one_leg_simulator/spider_leg_gazebo/: CMakeLists.txt  package.xml
one_leg_simulator/spider_leg_gazebo/launch/: spider_leg.launch
